<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_230sdp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/accent"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <ImageView
                android:id="@+id/imgMeal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddToFav"
        style="@style/CircularShapeOverlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:src="@drawable/ic_fav"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="bottom|end"
        app:shapeAppearanceOverlay="@style/CircularShapeOverlay" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:fontFamily="@font/myfont"
                android:text="@string/d_category"
                android:textColor="@color/g_black"
                app:drawableLeftCompat="@drawable/ic_category"
                app:drawableTint="@color/g_black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/tvCategoryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/myfont"
                app:layout_constraintBottom_toBottomOf="@+id/tvCategory"
                app:layout_constraintStart_toEndOf="@+id/tvCategory"
                app:layout_constraintTop_toTopOf="@+id/tvCategory"
                tools:text="koshary" />


            <TextView
                android:id="@+id/tvArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:fontFamily="@font/myfont"
                android:text="@string/area"
                android:textColor="@color/g_black"
                app:drawableLeftCompat="@drawable/ic_location"
                app:drawableTint="@color/g_black"
                app:layout_constraintBottom_toBottomOf="@+id/tvCategory"
                app:layout_constraintStart_toEndOf="@+id/tvCategoryName"
                app:layout_constraintTop_toTopOf="@+id/tvCategory" />

            <TextView
                android:id="@+id/tvAreaName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/myfont"
                android:textColor="@color/g_black"
                app:layout_constraintBottom_toBottomOf="@+id/tvCategory"
                app:layout_constraintStart_toEndOf="@+id/tvArea"
                app:layout_constraintTop_toTopOf="@+id/tvCategory"
                tools:text="egypt" />

            <TextView
                android:id="@+id/tvInstrutions"
                style="@style/instructions_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                app:layout_constraintStart_toStartOf="@id/tvCategory"
                app:layout_constraintTop_toBottomOf="@id/tvCategory" />

            <TextView
                android:id="@+id/tvInstrutionsDetails"
                style="@style/instructions_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                app:layout_constraintStart_toStartOf="@id/tvInstrutions"
                app:layout_constraintTop_toBottomOf="@id/tvInstrutions" />

            <TextView
                android:id="@+id/btn_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_video"
                android:drawablePadding="@dimen/_4sdp"
                android:text="@string/youtube"
                android:textColor="@color/red"
                android:fontFamily="@font/myfont"
                android:layout_marginStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_7sdp"
                app:layout_constraintStart_toEndOf="@id/tvInstrutions"
                app:layout_constraintTop_toTopOf="@id/tvInstrutions"
                app:layout_constraintBottom_toBottomOf="@id/tvInstrutions"
                app:drawableTint="@color/red" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progresBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="bottom"
        android:visibility="gone"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>